# AI_agents_framewors

./: README.md
AIcrew/: reporter.py  requirements.txt
AIcrew/game_design/: agents.py  game.py  pacman.py  snake_game.py  tasks.py
AIcrew/reporter/: README.md  agents.py  pyproject.toml  tasks.py
AIcrew/reporter/src/reporter/: crew.py  main.py
AIcrew/reporter/src/reporter/config/: agents.yaml  tasks.yaml
AIcrew/reporter/src/reporter/tools/: custom_tool.py
Agno/: agno_example.py  movie_recomendation_agent.py  news_team.py  requirements.txt
AtomicAgents/: chat_bot.py  multi_agent_example.py  requirements.txt
AtomicAgents/tools/: calculator.py  searxng_search.py
AutoGen/: quick_start.py  requirements.txt  team.py
Long_graph/: multi_agent_example_network.py  multi_agent_example_supervisor.py  multi_agent_example_supervisor_tools.py  requirements.txt  start_example.py
SmolaAgents/: quick_start.py  requirements.txt
SmolaAgents/batman/: main.py  plane_time.py  reasoning_plot.py
SmolaAgents/blog_writer/: agents.py
