[project]
name = "reporter"
version = "0.1.0"
description = "reporter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
reporter = "reporter.main:run"
run_crew = "reporter.main:run"
train = "reporter.main:train"
replay = "reporter.main:replay"
test = "reporter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
